// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehaviors-list-expand-item Renders \`pbehaviors-list-expand-item\` with custom props 1`] = `
<div
  class="v-tabs v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
          Patterns
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Entities
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Comments
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
    Recurrence
        </div>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item v-window-item--active"
        >
          <div
            class="layout py-3"
          >
            <div
              class="flex xs12 sm10 offset-sm1"
            >
              <div
                class="v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehavior-patterns-form-stub
                    form="[object Object]"
                    readonly="true"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`pbehaviors-list-expand-item Renders \`pbehaviors-list-expand-item\` with default props 1`] = `
<div
  class="v-tabs v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
          Patterns
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Entities
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Comments
        </div>
        <!---->
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item v-window-item--active"
        >
          <div
            class="layout py-3"
          >
            <div
              class="flex xs12 sm10 offset-sm1"
            >
              <div
                class="v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehavior-patterns-form-stub
                    form="[object Object]"
                    readonly="true"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <!---->
    </div>
  </div>
</div>
`;

exports[`pbehaviors-list-expand-item Renders \`pbehaviors-list-expand-item\` with opened comments tab 1`] = `
<div
  class="v-tabs v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
          Patterns
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Entities
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Comments
        </div>
        <!---->
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item v-window-item--active"
        >
          <div
            class="layout py-3"
          >
            <div
              class="flex xs12 sm10 offset-sm1"
            >
              <div
                class="v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehavior-patterns-form-stub
                    form="[object Object]"
                    readonly="true"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <!---->
    </div>
  </div>
</div>
`;

exports[`pbehaviors-list-expand-item Renders \`pbehaviors-list-expand-item\` with opened entities tab 1`] = `
<div
  class="v-tabs v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
          Patterns
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Entities
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Comments
        </div>
        <!---->
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item v-window-item--active"
        >
          <div
            class="layout py-3"
          >
            <div
              class="flex xs12 sm10 offset-sm1"
            >
              <div
                class="v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehavior-patterns-form-stub
                    form="[object Object]"
                    readonly="true"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <!---->
    </div>
  </div>
</div>
`;

exports[`pbehaviors-list-expand-item Renders \`pbehaviors-list-expand-item\` with opened recurrence rule tab 1`] = `
<div
  class="v-tabs v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
          Patterns
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Entities
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Comments
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
    Recurrence
        </div>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item v-window-item--active"
        >
          <div
            class="layout py-3"
          >
            <div
              class="flex xs12 sm10 offset-sm1"
            >
              <div
                class="v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehavior-patterns-form-stub
                    form="[object Object]"
                    readonly="true"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;
